# backend

./: .env  Cargo.toml
src/: api_error.rs  errors.rs  main.rs  routes.rs
src/email/: api.rs  mod.rs
src/email_verification_token/: model.rs
src/models/: mod.rs  other.rs  user.rs
src/models/sql/: main.sql
src/utils/: auth.rs  mod.rs  reqwest.rs
src/views/: admin_progs.rs  auth.rs  mod.rs
src/websocket/: mod.rs  server.rs
